added share meta data

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,30 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" itemscope itemtype="http://schema.org/Service">
 <head>
   <meta charset="utf-8">
-  <title>JupiterAndTheGiraffe</title>
+  <title>Jupiter and the Giraffe | A digital agency out of this world.</title>
+  <meta name="description" content="We make web things. Websites and web-apps in Wordpress, Squarespace, React, Angular. Design, code, developers and products.">
+
   <base href="/">
+
+  <!-- Schema.org markup for Google+ -->
+  <meta itemprop="name" content="Jupiter and the Giraffe">
+  <meta itemprop="description" content="We make web things. Websites and web-apps in Wordpress, Squarespace, React, Angular. Design, code, developers and products.">
+  <meta itemprop="image" content="share-image.jpg">
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Jupiter and the Giraffe">
+  <meta name="twitter:description" content="We make web things. Websites and web-apps in Wordpress, Squarespace, React, Angular. Design, code, developers and products.">
+  <!-- Twitter summary card with large image must be at least 280x150px -->
+  <meta name="twitter:image:src" content="share-image.jpg">
+
+  <!-- Open Graph data -->
+  <meta property="og:title" content="Jupiter and the Giraffe" />
+  <meta property="og:type" content="service" />
+  <meta property="og:url" content="http://www.jupiterandthegiraffe.com/" />
+  <meta property="og:image" content="share-image.jpg" />
+  <meta property="og:description" content="We make web things. Websites and web-apps in Wordpress, Squarespace, React, Angular. Design, code, developers and products." />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
