--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <link rel=“preload” href=“/assets/fonts/kgsummerstormrough-webfont.woff” as=“font”>
-  <link rel=“preload” href=“/assets/fonts/kgsummerstormrough-webfont.woff2” as=“font”>
+  <link rel="preload" href="https://s3.eu-west-2.amazonaws.com/static.assets.jupiterandthegiraffe/kgsummerstormrough-webfont.woff2" as="font">
+  <link rel="preload" href="https://s3.eu-west-2.amazonaws.com/static.assets.jupiterandthegiraffe/kgsummerstormrough-webfont.woff" as="font">
 </head>
 <body>
   <!-- Global site tag (gtag.js) - Google Analytics -->
