--- a/src/index.html
+++ b/src/index.html
@@ -2,29 +2,29 @@
 <html lang="en" itemscope itemtype="http://schema.org/Service">
 <head>
   <meta charset="utf-8">
-  <title>Jupiter and the Giraffe | Web Digital Agency Freelancer London, UK</title>
-  <meta name="description" content="A digital agency out of this world. Websites and web-apps in Wordpress, Squarespace, React, Angular. Design, code, developers and products.">
+  <title>Jupiter and the Giraffe | A branding agency out of this world. Earth, Milky Way</title>
+  <meta name="description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
 
   <base href="/">
 
   <!-- Schema.org markup for Google+ -->
-  <meta itemprop="name" content="Jupiter and the Giraffe | Web Digital Agency Freelancer London, UK">
-  <meta itemprop="description" content="A digital agency out of this world. Websites and web-apps in Wordpress, Squarespace, React, Angular. Design, code, developers and products.">
+  <meta itemprop="name" content="Jupiter and the Giraffe | A branding agency out of this world. Earth, Milky Way">
+  <meta itemprop="description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
   <meta itemprop="image" content="share-image.jpg">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Jupiter and the Giraffe | Web Digital Agency Freelancer London, UK">
-  <meta name="twitter:description" content="A digital agency out of this world. Websites and web-apps in Wordpress, Squarespace, React, Angular. Design, code, developers and products.">
+  <meta name="twitter:title" content="Jupiter and the Giraffe | A branding agency out of this world. Earth, Milky Way">
+  <meta name="twitter:description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
   <!-- Twitter summary card with large image must be at least 280x150px -->
   <meta name="twitter:image:src" content="share-image.jpg">
 
   <!-- Open Graph data -->
-  <meta property="og:title" content="Jupiter and the Giraffe | Web Digital Agency Freelancer London, UK" />
+  <meta property="og:title" content="Jupiter and the Giraffe | A branding agency out of this world. Earth, Milky Way" />
   <meta property="og:type" content="service" />
   <meta property="og:url" content="http://www.jupiterandthegiraffe.com/" />
   <meta property="og:image" content="share-image.jpg" />
-  <meta property="og:description" content="A digital agency out of this world. Websites and web-apps in Wordpress, Squarespace, React, Angular. Design, code, developers and products." />
+  <meta property="og:description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs." />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
