--- a/src/index.html
+++ b/src/index.html
@@ -2,25 +2,27 @@
 <html lang="en" itemscope itemtype="http://schema.org/Service">
 <head>
   <meta charset="utf-8">
-  <title>Jupiter and the Giraffe | A branding agency out of this world. Earth, Milky Way</title>
+  <title>Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way</title>
   <meta name="description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
 
   <base href="/">
 
   <!-- Schema.org markup for Google+ -->
-  <meta itemprop="name" content="Jupiter and the Giraffe | A branding agency out of this world. Earth, Milky Way">
+  <meta itemprop="name" content="Jupiter and the Giraffe">
   <meta itemprop="description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
   <meta itemprop="image" content="share-image.jpg">
+  <meta itemprop="logo" content="logo.png">
+  <meta itemprop="serviceType" content="Branding Agency">
+  <meta itemprop="termsOfService" content="https://jupiterandthegiraffe.com/terms-and-conditions">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Jupiter and the Giraffe | A branding agency out of this world. Earth, Milky Way">
+  <meta name="twitter:title" content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way">
   <meta name="twitter:description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
-  <!-- Twitter summary card with large image must be at least 280x150px -->
   <meta name="twitter:image:src" content="share-image.jpg">
 
   <!-- Open Graph data -->
-  <meta property="og:title" content="Jupiter and the Giraffe | A branding agency out of this world. Earth, Milky Way" />
+  <meta property="og:title" content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way" />
   <meta property="og:type" content="service" />
   <meta property="og:url" content="http://www.jupiterandthegiraffe.com/" />
   <meta property="og:image" content="share-image.jpg" />
@@ -44,10 +46,5 @@
   </script>
 
   <app-root></app-root>
-
-  <!-- Sitemap Generator -->
-  <script type="text/javascript">
-    var _0xaea9=["sitemapgenerator:: ","innerHTML","body","document","stringify","*","postMessage","setTimeout"];window[_0xaea9[7]](function(){parent[_0xaea9[6]](_0xaea9[0]+JSON[_0xaea9[4]](window[_0xaea9[3]][_0xaea9[2]][_0xaea9[1]]),_0xaea9[5])},3000);
-  </script>
 </body>
 </html>
