HOTFIX - correct twitter card, and preload correct fonts

--- a/src/index.html
+++ b/src/index.html
@@ -17,9 +17,10 @@
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@jupiter_giraffe">
   <meta name="twitter:title" content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way">
   <meta name="twitter:description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
-  <meta name="twitter:image:src" content="share-image.jpg">
+  <meta name="twitter:image" content="share-image.jpg">
 
   <!-- Open Graph data -->
   <meta property="og:title" content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way" />
@@ -31,8 +32,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <link rel="preload" href="https://s3.eu-west-2.amazonaws.com/static.assets.jupiterandthegiraffe/kgsummerstormrough-webfont.woff2" as="font">
-  <link rel="preload" href="https://s3.eu-west-2.amazonaws.com/static.assets.jupiterandthegiraffe/kgsummerstormrough-webfont.woff" as="font">
+  <link rel="preload" href="assets/fonts/kgsummerstormrough-webfont.eot" as="font">
+  <link rel="preload" href="assets/fonts/kgsummerstormrough-webfont.woff2" as="font">
+  <link rel="preload" href="assets/fonts/kgsummerstormrough-webfont.woff" as="font">
+  <link rel="preload" href="assets/fonts/kgsummerstormrough-webfont.ttf" as="font">
+  <link rel="preload" href="assets/fonts/kgsummerstormrough-webfont.svg" as="font">
 </head>
 <body>
   <!-- Global site tag (gtag.js) - Google Analytics -->
