--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <!-- Schema.org markup for Google+ -->
   <meta itemprop="name" content="Jupiter and the Giraffe">
   <meta itemprop="description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
-  <meta itemprop="image" content="share-image.jpg">
+  <meta itemprop="image" content="https://jupiterandthegiraffe.com/share-image.jpg">
   <meta itemprop="logo" content="logo.png">
   <meta itemprop="serviceType" content="Branding Agency">
   <meta itemprop="termsOfService" content="https://jupiterandthegiraffe.com/terms-and-conditions">
@@ -20,13 +20,13 @@
   <meta name="twitter:site" content="@jupiter_giraffe">
   <meta name="twitter:title" content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way">
   <meta name="twitter:description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
-  <meta name="twitter:image" content="share-image.jpg">
+  <meta name="twitter:image" content="https://jupiterandthegiraffe.com/share-image.jpg">
 
   <!-- Open Graph data -->
   <meta property="og:title" content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way" />
   <meta property="og:type" content="service" />
   <meta property="og:url" content="http://www.jupiterandthegiraffe.com/" />
-  <meta property="og:image" content="share-image.jpg" />
+  <meta property="og:image" content="https://jupiterandthegiraffe.com/share-image.jpg" />
   <meta property="og:description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs." />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
