--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+  <link href="https://fonts.googleapis.com/css?family=Prompt:300" rel="stylesheet">
+
   <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.eot" as="font">
   <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff2" as="font">
   <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff" as="font">
