--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title>Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way</title>
-  <meta name="description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
+  <meta name="description" content="Brand strategy, bespoke website design and maker - Sydney, London and worldwide">
 
   <base href="/">
 
   <!-- Schema.org markup for Google+ -->
   <meta itemprop="name" content="Jupiter and the Giraffe">
-  <meta itemprop="description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
+  <meta itemprop="description" content="Brand strategy, bespoke website design and maker - Sydney, London and worldwide">
   <meta itemprop="image" content="https://jupiterandthegiraffe.com/share-image.jpg">
   <meta itemprop="logo" content="https://jupiterandthegiraffe.com/logo.png">
   <meta itemprop="serviceType" content="Branding Agency">
@@ -19,7 +19,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@jupiter_giraffe">
   <meta name="twitter:title" content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way">
-  <meta name="twitter:description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
+  <meta name="twitter:description" content="Brand strategy, bespoke website design and maker - Sydney, London and worldwide">
   <meta name="twitter:image" content="https://jupiterandthegiraffe.com/share-image.jpg">
 
   <!-- Open Graph data -->
@@ -27,7 +27,7 @@
   <meta property="og:type" content="service" />
   <meta property="og:url" content="http://www.jupiterandthegiraffe.com/" />
   <meta property="og:image" content="https://jupiterandthegiraffe.com/share-image.jpg" />
-  <meta property="og:description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs." />
+  <meta property="og:description" content="Brand strategy, bespoke website design and maker - Sydney, London and worldwide" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
