--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way</title>
-  <meta name="description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
+  <meta name="description"
+        content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
 
   <base href="/">
 
   <!-- Schema.org markup for Google+ -->
   <meta itemprop="name" content="Jupiter and the Giraffe">
-  <meta itemprop="description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
+  <meta itemprop="description"
+        content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
   <meta itemprop="image" content="https://jupiterandthegiraffe.com/share-image.jpg">
   <meta itemprop="logo" content="https://jupiterandthegiraffe.com/logo.png">
   <meta itemprop="serviceType" content="Branding Agency">
@@ -18,16 +20,20 @@
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@jupiter_giraffe">
-  <meta name="twitter:title" content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way">
-  <meta name="twitter:description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
+  <meta name="twitter:title"
+        content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way">
+  <meta name="twitter:description"
+        content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs.">
   <meta name="twitter:image" content="https://jupiterandthegiraffe.com/share-image.jpg">
 
   <!-- Open Graph data -->
-  <meta property="og:title" content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way" />
-  <meta property="og:type" content="service" />
-  <meta property="og:url" content="http://www.jupiterandthegiraffe.com/" />
-  <meta property="og:image" content="https://jupiterandthegiraffe.com/share-image.jpg" />
-  <meta property="og:description" content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs." />
+  <meta property="og:title"
+        content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way"/>
+  <meta property="og:type" content="service"/>
+  <meta property="og:url" content="http://www.jupiterandthegiraffe.com/"/>
+  <meta property="og:image" content="https://jupiterandthegiraffe.com/share-image.jpg"/>
+  <meta property="og:description"
+        content="We'll help your company find its voice, establish its brand and build you a kick-ass website. Web design, logo, branding and website build in Wordpress, React, Angular, Vuejs."/>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -40,34 +46,22 @@
   <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.ttf" as="font">
   <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.svg" as="font">
 
-  <!-- Facebook Pixel Code -->
-  <script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-      n.queue=[];t=b.createElement(e);t.async=!0;
-      t.src=v;s=b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t,s)}(window, document,'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '418277265574664');
-    fbq('track', 'PageView');
-  </script>
-  <noscript><img height="1" width="1" style="display:none"
-                 src="https://www.facebook.com/tr?id=418277265574664&ev=PageView&noscript=1"
-  /></noscript>
-  <!-- End Facebook Pixel Code -->
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
+    var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+    j.async = true; j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+    f.parentNode.insertBefore(j, f);
+  })(window, document, 'script', 'dataLayer', 'GTM-M8Z5BBT');</script>
+  <!-- End Google Tag Manager -->
 </head>
 <body>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-86964599-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'UA-86964599-1');
-  </script>
+<!-- Google Tag Manager (noscript) -->
+<noscript>
+  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8Z5BBT"
+          height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
+<!-- End Google Tag Manager (noscript) -->
 
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
