--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
   <base href="/">
 
-  <link rel="preload" href="https://fonts.googleapis.com/css?family=Prompt:300" as="font">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Prompt:300">
   <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.eot" as="font">
   <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff2" as="font">
   <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff" as="font">
