lazyload images and animate transform (#61)
* lazyload images and animate transform

* Update index.html

* add public element

* Update defer-load.directive.ts

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,13 @@
 
   <base href="/">
 
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Prompt:300">
+  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.eot" as="font">
+  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff2" as="font">
+  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff" as="font">
+  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.ttf" as="font">
+  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.svg" as="font">
+
   <!-- Schema.org markup for Google+ -->
   <meta itemprop="name" content="Jupiter and the Giraffe">
   <meta itemprop="description" content="Brand strategy, bespoke website design and maker - Sydney, London and worldwide">
@@ -31,14 +38,6 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
-  <link href="https://fonts.googleapis.com/css?family=Prompt:300" rel="stylesheet">
-
-  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.eot" as="font">
-  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff2" as="font">
-  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff" as="font">
-  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.ttf" as="font">
-  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.svg" as="font">
 
   <!-- Google Tag Manager -->
   <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
