update all titles

--- a/src/index.html
+++ b/src/index.html
@@ -10,17 +10,8 @@
 
   <meta charset="utf-8">
   <title>Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way</title>
-  <meta name="description" content="Brand strategy, Brand Identity and Brand Experience, bespoke website design and maker - Sydney, London and worldwide">
 
   <base href="/">
-
-  <!-- Schema.org markup for Google+ -->
-  <meta itemprop="name" content="Jupiter and the Giraffe">
-  <meta itemprop="description" content="Brand strategy, Brand Identity and Brand Experience, bespoke website design and maker - Sydney, London and worldwide">
-  <meta itemprop="image" content="https://jupiterandthegiraffe.com/share-image.jpg">
-  <meta itemprop="logo" content="https://jupiterandthegiraffe.com/logo.png">
-  <meta itemprop="serviceType" content="Branding Agency">
-  <meta itemprop="termsOfService" content="https://jupiterandthegiraffe.com/terms-and-conditions">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary_large_image">
@@ -28,6 +19,7 @@
   <meta name="twitter:title" content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way">
   <meta name="twitter:description" content="Brand strategy, Brand Identity and Brand Experience, bespoke website design and maker - Sydney, London and worldwide">
   <meta name="twitter:image" content="https://jupiterandthegiraffe.com/share-image.jpg">
+  <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
 
   <!-- Open Graph data -->
   <meta property="og:title" content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way" />
