--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@jupiter_giraffe">
   <meta name="twitter:title" content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way">
-  <meta name="twitter:description" content="Brand strategy, Brand Identity and Brand Experience, bespoke website design and maker - Sydney, London and worldwide">
+  <meta name="twitter:description" content="Brand strategy, Identity and Experience, bespoke website design and maker - Sydney, London and worldwide">
   <meta name="twitter:image" content="https://jupiterandthegiraffe.com/share-image.jpg">
   <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
 
@@ -26,7 +26,7 @@
   <meta property="og:type" content="service" />
   <meta property="og:url" content="http://www.jupiterandthegiraffe.com/" />
   <meta property="og:image" content="https://jupiterandthegiraffe.com/share-image.jpg" />
-  <meta property="og:description" content="Brand strategy, Brand Identity and Brand Experience, bespoke website design and maker - Sydney, London and worldwide" />
+  <meta property="og:description" content="Brand strategy, Identity and Experience, bespoke website design and maker - Sydney, London and worldwide" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
