--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 
   <meta charset="utf-8">
   <title>Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way</title>
+  <meta name="description" content="Brand strategy, Identity and Experience, bespoke website design and maker - Sydney, London and worldwide">
 
   <base href="/">
 
