--- a/src/index.html
+++ b/src/index.html
@@ -9,25 +9,25 @@
   <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.svg" as="font">
 
   <meta charset="utf-8">
-  <title>Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way</title>
-  <meta name="description" content="Brand strategy, Identity and Experience, bespoke website design and maker - Sydney, London and worldwide">
+  <title>🚀 Jupiter and the Giraffe | Brand Strategy & Design</title>
+  <meta name="description" content="Discover how brands can move people. Brand strategy, Identity & Experience. Nomadic Graphic Design and websites">
 
   <base href="/">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@jupiter_giraffe">
-  <meta name="twitter:title" content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way">
-  <meta name="twitter:description" content="Brand strategy, Identity and Experience, bespoke website design and maker - Sydney, London and worldwide">
+  <meta name="twitter:title" content="🚀 Jupiter and the Giraffe | Brand Strategy & Design">
+  <meta name="twitter:description" content="Discover how brands can move people. Brand strategy, Identity & Experience. Nomadic Graphic Design and websites">
   <meta name="twitter:image" content="https://jupiterandthegiraffe.com/share-image.jpg">
   <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
 
   <!-- Open Graph data -->
-  <meta property="og:title" content="Jupiter and the Giraffe 🚀 | A branding agency out of this world. Earth, Milky Way" />
+  <meta property="og:title" content="🚀 Jupiter and the Giraffe | Brand Strategy & Design" />
   <meta property="og:type" content="service" />
-  <meta property="og:url" content="http://www.jupiterandthegiraffe.com/" />
+  <meta property="og:url" content="jupiterandthegiraffe.com" />
   <meta property="og:image" content="https://jupiterandthegiraffe.com/share-image.jpg" />
-  <meta property="og:description" content="Brand strategy, Identity and Experience, bespoke website design and maker - Sydney, London and worldwide" />
+  <meta property="og:description" content="Discover how brands can move people. Brand strategy, Identity & Experience. Nomadic Graphic Design and websites" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -43,8 +43,7 @@
 <body>
 <!-- Google Tag Manager (noscript) -->
 <noscript>
-  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8Z5BBT"
-          height="0" width="0" style="display:none;visibility:hidden"></iframe>
+  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8Z5BBT" height="0" width="0" style="display:none;visibility:hidden"></iframe>
 </noscript>
 <!-- End Google Tag Manager (noscript) -->
 
