--- a/src/index.html
+++ b/src/index.html
@@ -9,25 +9,25 @@
   <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.svg" as="font">
 
   <meta charset="utf-8">
-  <title>🚀 Jupiter and the Giraffe | Brand Strategy & Design</title>
-  <meta name="description" content="Discover how brands can move people. Brand strategy, Identity & Experience. Nomadic Graphic Design and websites">
+  <title>🚀 Jupiter and the Giraffe | Branding & Design for the Digital Technology Industry</title>
+  <meta name="description" content="We know how tech works. We do Branding and Design for digital products or services. Contacs us about branding your big idea!">
 
   <base href="/">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@jupiter_giraffe">
-  <meta name="twitter:title" content="🚀 Jupiter and the Giraffe | Brand Strategy & Design">
-  <meta name="twitter:description" content="Discover how brands can move people. Brand strategy, Identity & Experience. Nomadic Graphic Design and websites">
+  <meta name="twitter:title" content="🚀 Jupiter and the Giraffe | Branding & Design for the Digital Technology Industry">
+  <meta name="twitter:description" content="We know how tech works. We do Branding and Design for digital products or services. Contacs us about branding your big idea!">
   <meta name="twitter:image" content="https://jupiterandthegiraffe.com/share-image.jpg">
   <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
 
   <!-- Open Graph data -->
-  <meta property="og:title" content="🚀 Jupiter and the Giraffe | Brand Strategy & Design" />
+  <meta property="og:title" content="🚀 Jupiter and the Giraffe | Branding & Design for the Digital Technology Industry" />
   <meta property="og:type" content="service" />
   <meta property="og:url" content="jupiterandthegiraffe.com" />
   <meta property="og:image" content="https://jupiterandthegiraffe.com/share-image.jpg" />
-  <meta property="og:description" content="Discover how brands can move people. Brand strategy, Identity & Experience. Nomadic Graphic Design and websites" />
+  <meta property="og:description" content="We know how tech works. We do Branding and Design for digital products or services. Contacs us about branding your big idea!" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
