--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html lang="en" itemscope itemtype="http://schema.org/Service">
 <head>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Prompt:300">
-  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.eot" as="font">
-  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff2" as="font">
-  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff" as="font">
-  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.ttf" as="font">
-  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.svg" as="font">
+  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.eot" as="font" crossorigin>
+  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff" as="font" type="font/woff" crossorigin>
+  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.ttf" as="font" type="font/ttf" crossorigin>
+  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.svg" as="font" crossorigin>
 
   <meta charset="utf-8">
   <title>🚀 Jupiter and the Giraffe | Branding & Design for the Digital Technology Industry</title>
