--- a/src/index.html
+++ b/src/index.html
@@ -6,25 +6,25 @@
   <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff" as="font" type="font/woff" crossorigin>
 
   <meta charset="utf-8">
-  <title>🚀 Jupiter and the Giraffe | Branding & Design for the Digital Technology Industry</title>
-  <meta name="description" content="We know how tech works. We do Branding and Design for digital products or services. Contacs us about branding your big idea!">
+  <title>🚀 Jupiter and the Giraffe | Remote branding & design studio for clinical and commercial biotech</title>
+  <meta name="description" content="We do branding and design for clinical and commercial biotech products. Because revolutionary technology needs revolutionary design. Contact us now!">
 
   <base href="/">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@jupiter_giraffe">
-  <meta name="twitter:title" content="🚀 Jupiter and the Giraffe | Branding & Design for the Digital Technology Industry">
-  <meta name="twitter:description" content="We know how tech works. We do Branding and Design for digital products or services. Contacs us about branding your big idea!">
+  <meta name="twitter:title" content="🚀 Jupiter and the Giraffe | Remote branding & design studio for clinical and commercial biotech">
+  <meta name="twitter:description" content="We do branding and design for clinical and commercial biotech products. Because revolutionary technology needs revolutionary design. Contact us now!">
   <meta name="twitter:image" content="https://jupiterandthegiraffe.com/share-image.jpg">
   <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
 
   <!-- Open Graph data -->
-  <meta property="og:title" content="🚀 Jupiter and the Giraffe | Branding & Design for the Digital Technology Industry" />
+  <meta property="og:title" content="🚀 Jupiter and the Giraffe | Remote branding & design studio for clinical and commercial biotech" />
   <meta property="og:type" content="service" />
-  <meta property="og:url" content="jupiterandthegiraffe.com" />
+  <meta property="og:url" content="https://jupiterandthegiraffe.com/" />
   <meta property="og:image" content="https://jupiterandthegiraffe.com/share-image.jpg" />
-  <meta property="og:description" content="We know how tech works. We do Branding and Design for digital products or services. Contacs us about branding your big idea!" />
+  <meta property="og:description" content="We do branding and design for clinical and commercial biotech products. Because revolutionary technology needs revolutionary design. Contact us now!" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
