--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" itemscope itemtype="http://schema.org/Service">
 <head>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,700,700i,800,800i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700,800,&display=swap" rel="stylesheet">
   <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff" as="font" type="font/woff" crossorigin>
 
