--- a/src/index.html
+++ b/src/index.html
@@ -1,49 +1,48 @@
 <!doctype html>
 <html lang="en" itemscope itemtype="http://schema.org/Service">
-<head>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700,800,&display=swap" rel="stylesheet">
-  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff2" as="font" type="font/woff2" crossorigin>
-  <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff" as="font" type="font/woff" crossorigin>
+  <head>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700,800,&display=swap" rel="stylesheet">
+    <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff" as="font" type="font/woff" crossorigin>
 
-  <meta charset="utf-8">
-  <title>🚀 Jupiter and the Giraffe | Digital product branding & design studio</title>
-  <meta name="description" content="We do branding and design for life-changing digital products. Because revolutionary technology needs revolutionary design. Contact us now!">
+    <meta charset="utf-8">
+    <title>🚀 Jupiter and the Giraffe | Digital product branding & design studio</title>
+    <meta name="description" content="Branding and design for digital products. Because revolutionary technology needs revolutionary design. Contact us now!">
 
-  <base href="/">
+    <base href="/">
 
-  <!-- Twitter Card data -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@jupiter_giraffe">
-  <meta name="twitter:title" content="🚀 Jupiter and the Giraffe | Digital product branding & design studio">
-  <meta name="twitter:description" content="We do branding and design for life-changing digital products. Because revolutionary technology needs revolutionary design. Contact us now!">
-  <meta name="twitter:image" content="https://jupiterandthegiraffe.com/share-image.jpg">
-  <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@jupiter_giraffe">
+    <meta name="twitter:title" content="🚀 Jupiter and the Giraffe | Digital product branding & design studio">
+    <meta name="twitter:description" content="Branding and design for digital products. Because revolutionary technology needs revolutionary design. Contact us now!">
+    <meta name="twitter:image" content="https://jupiterandthegiraffe.com/share-image.jpg">
+    <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
 
-  <!-- Open Graph data -->
-  <meta property="og:title" content="🚀 Jupiter and the Giraffe | Digital product branding & design studio" />
-  <meta property="og:type" content="service" />
-  <meta property="og:url" content="https://jupiterandthegiraffe.com/" />
-  <meta property="og:image" content="https://jupiterandthegiraffe.com/share-image.jpg" />
-  <meta property="og:description" content="We do branding and design for life-changing digital products. Because revolutionary technology needs revolutionary design. Contact us now!" />
+    <!-- Open Graph data -->
+    <meta property="og:title" content="🚀 Jupiter and the Giraffe | Digital product branding & design studio" />
+    <meta property="og:type" content="service" />
+    <meta property="og:url" content="https://jupiterandthegiraffe.com/" />
+    <meta property="og:image" content="https://jupiterandthegiraffe.com/share-image.jpg" />
+    <meta property="og:description" content="Branding and design for digital products. Because revolutionary technology needs revolutionary design. Contact us now!" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-  <!-- Google Tag Manager -->
-  <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
-    var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
-    j.async = true; j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-    f.parentNode.insertBefore(j, f);
-  })(window, document, 'script', 'dataLayer', 'GTM-M8Z5BBT');</script>
-  <!-- End Google Tag Manager -->
-</head>
-<body>
-<!-- Google Tag Manager (noscript) -->
-<noscript>
-  <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8Z5BBT" height="0" width="0" style="display:none;visibility:hidden"></iframe>
-</noscript>
-<!-- End Google Tag Manager (noscript) -->
-
-<app-root></app-root>
-</body>
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
+      var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
+      j.async = true; j.src = 'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
+      f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-M8Z5BBT');</script>
+    <!-- End Google Tag Manager -->
+  </head>
+  <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8Z5BBT" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <app-root></app-root>
+  </body>
 </html>
