--- a/src/index.html
+++ b/src/index.html
@@ -6,25 +6,25 @@
     <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff" as="font" type="font/woff" crossorigin>
 
     <meta charset="utf-8">
-    <title>🚀 Jupiter and the Giraffe | Digital product and SaaS branding & design studio</title>
-    <meta name="description" content="Branding and design for digital products. Because revolutionary technology needs revolutionary design. Contact us now!">
+    <title>🚀 Jupiter and the Giraffe | Branding and design for life science startups</title>
+    <meta name="description" content="Helping life science startups grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!">
 
     <base href="/">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@jupiter_giraffe">
-    <meta name="twitter:title" content="🚀 Jupiter and the Giraffe | Digital product and SaaS branding & design studio">
-    <meta name="twitter:description" content="Branding and design for digital products. Because revolutionary technology needs revolutionary design. Contact us now!">
+    <meta name="twitter:title" content="🚀 Jupiter and the Giraffe | Branding and design for life science startups">
+    <meta name="twitter:description" content="Helping life science startups grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!">
     <meta name="twitter:image" content="https://jupiterandthegiraffe.com/share-image.jpg">
     <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="🚀 Jupiter and the Giraffe | Digital product and SaaS branding & design studio" />
+    <meta property="og:title" content="🚀 Jupiter and the Giraffe | Branding and design for life science startups" />
     <meta property="og:type" content="service" />
     <meta property="og:url" content="https://jupiterandthegiraffe.com/" />
     <meta property="og:image" content="https://jupiterandthegiraffe.com/share-image.jpg" />
-    <meta property="og:description" content="Branding and design for digital products. Because revolutionary technology needs revolutionary design. Contact us now!" />
+    <meta property="og:description" content="Helping life science startups grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
