updated font stack

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700,800,&display=swap" rel="stylesheet">
     <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff" as="font" type="font/woff" crossorigin>
+    <link rel="stylesheet" href="https://use.typekit.net/phn4kjr.css">
+
 
     <meta charset="utf-8">
     <title>🚀 Jupiter and the Giraffe | Branding and design for life science startups</title>
