changed to relative paths and added plugins folder to assets with js plugins

--- a/src/index.html
+++ b/src/index.html
@@ -43,12 +43,12 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8Z5BBT" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r83/three.js">
+    <script src="../assets/plugins/three.js">
         </script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js">
+        <script src="../assets/plugins/tween-max-min.js">
         </script>
 
-        <script src="https://tympanus.net/Development/DistortionHoverEffect/js/hover.js"></script>
+        <script src="../assets/plugins/hover.js"></script>
     <app-root></app-root>
   </body>
 </html>
