--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+    <script src="../assets/plugins/three.js" async></script>
+    <script src="../assets/plugins/tween-max-min.js" async></script>
+    <script src="../assets/plugins/hover.js" async></script>
+
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
       var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
@@ -44,12 +48,6 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-M8Z5BBT" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <script src="../assets/plugins/three.js">
-        </script>
-        <script src="../assets/plugins/tween-max-min.js">
-        </script>
-
-        <script src="../assets/plugins/hover.js"></script>
     <app-root></app-root>
   </body>
 </html>
