--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" itemscope itemtype="http://schema.org/Service">
   <head>
+  
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,700,&display=swap" rel="stylesheet">
     <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/assets/fonts/kgsummerstormrough-webfont.woff" as="font" type="font/woff" crossorigin>
@@ -29,6 +30,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+    <script src="../assets/plugins/three.js" async></script>
+    <script src="../assets/plugins/tween-max-min.js" async></script>
+    <script src="../assets/plugins/hover.js" async></script>
+
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
       var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
@@ -46,3 +51,5 @@
     <app-root></app-root>
   </body>
 </html>
+
+
