--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <script src="../assets/plugins/three.js" async></script>
-    <script src="../assets/plugins/tween-max-min.js" async></script>
-    <script src="../assets/plugins/hover.js" async></script>
+    <script src="../assets/plugins/three.js" defer></script>
+    <script src="../assets/plugins/tween-max-min.js" defer></script>
+    <script src="../assets/plugins/hover.js" defer></script>
 
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
