--- a/src/index.html
+++ b/src/index.html
@@ -7,25 +7,25 @@
     <link rel="preload" href="/assets/fonts/opensans-bold-webfont.woff'" as="style" type="font/woff" crossorigin>
 
     <meta charset="utf-8">
-    <title>Branding and Design for Future-Thinking Tech Startups | 🚀 Jupiter and the Giraffe</title>
-    <meta name="description" content="Helping future-thinking tech startups grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!">
+    <title>Branding and Design for Future-Thinking Tech Companies | 🚀 Jupiter and the Giraffe</title>
+    <meta name="description" content="Helping future-thinking tech companies and startups grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!">
 
     <base href="/">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@jupiter_giraffe">
-    <meta name="twitter:title" content="Branding and Design for Future-Thinking Tech Startups | 🚀 Jupiter and the Giraffe">
-    <meta name="twitter:description" content="Helping future-thinking tech startups grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!">
+    <meta name="twitter:title" content="Branding and Design for Future-Thinking Tech Companies | 🚀 Jupiter and the Giraffe">
+    <meta name="twitter:description" content="Helping future-thinking tech companies and startups grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!">
     <meta name="twitter:image" content="https://jupiterandthegiraffe.com/share-image.jpg">
     <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="Branding and Design for Future-Thinking Tech Startups | 🚀 Jupiter and the Giraffe" />
+    <meta property="og:title" content="Branding and Design for Future-Thinking Tech Companies | 🚀 Jupiter and the Giraffe" />
     <meta property="og:type" content="service" />
     <meta property="og:url" content="https://jupiterandthegiraffe.com/" />
     <meta property="og:image" content="https://jupiterandthegiraffe.com/share-image.jpg" />
-    <meta property="og:description" content="Helping future-thinking tech startups grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!" />
+    <meta property="og:description" content="Helping future-thinking tech companies and startups grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
