--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,8 @@
     <script src="../assets/plugins/tween-max-min.js" defer></script>
     <script src="../assets/plugins/hover.js" defer></script>
 
+    <meta name="p:domain_verify" content="0081dd64aa9d5035839b5886bf4fa5fd"/>
+
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) { w[l] = w[l] || []; w[l].push({'gtm.start': new Date().getTime(), event: 'gtm.js'});
       var f = d.getElementsByTagName(s)[0], j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
