add passive scroll, cdn three.js

--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <script src="/assets/plugins/three.js" defer></script>
-    <script src="/assets/plugins/tween-max-min.js" defer></script>
-    <script src="/assets/plugins/hover.js" defer></script>
+    <script src="https://assets.jupiterandthegiraffe.com/three.js" defer></script>
+    <script src="https://assets.jupiterandthegiraffe.com/tween-max-min.js" defer></script>
+    <script src="https://assets.jupiterandthegiraffe.com/hover.js" defer></script>
 
     <meta name="p:domain_verify" content="0081dd64aa9d5035839b5886bf4fa5fd"/>
 
