--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <meta property="og:title" content="Branding and Design for Future-Thinking Tech Companies" />
     <meta property="og:type" content="service" />
     <meta property="og:url" content="https://jupiterandthegiraffe.com/" />
-    <meta property="og:image" content="https://jupiterandthegiraffe.com/share-image.jpg" />
+    <meta property="og:image" content="https://assets.jupiterandthegiraffe.com/share-image-min.jpg" />
     <meta property="og:description" content="Helping future-thinking tech companies and grow and stand out in the market because revolutionary technology needs revolutionary design. Contact us now!" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
