--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en" itemscope itemtype="http://schema.org/Service">
   <head>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:900&display=swap" rel="stylesheet">
     <link rel="preload" href="https://assets.jupiterandthegiraffe.com/kgsummerstormrough-webfont.woff" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://assets.jupiterandthegiraffe.com/kgsummerstormrough-webfont.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="https://assets.jupiterandthegiraffe.com/icomoon.eot" as="font" crossorigin>
