add lots of stuff

--- a/src/index.html
+++ b/src/index.html
@@ -14,27 +14,27 @@
     <link rel="preload" href="https://assets.jupiterandthegiraffe.com/fontawesome-webfont.woff" as="font" crossorigin="">
     <link rel="preload" href="https://assets.jupiterandthegiraffe.com/fontawesome-webfont.ttf" as="font" crossorigin="">
     <link rel="preload" href="https://assets.jupiterandthegiraffe.com/fontawesome-webfont.svg" as="font" crossorigin="">
-    
+
     <meta charset="utf-8">
-    <title>Branding and Design for Future-Thinking Tech Companies</title>
-    <meta name="description" content="Branding future-thinking tech companies helping them scale and stand out in the market. 'Cause revolutionary technology needs revolutionary design. Contact us now!">
+    <title>Design and Build SaaS Products for Future-Thinking Tech</title>
+    <meta name="description" content="Design and Development Powerhouse building SaaS products and web apps for tech that changes the world.">
 
     <base href="/">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@jupiter_giraffe">
-    <meta name="twitter:title" content="Branding and Design for Future-Thinking Tech Companies">
-    <meta name="twitter:description" content="Branding future-thinking tech companies helping them scale and stand out in the market. 'Cause revolutionary technology needs revolutionary design. Contact us now!">
+    <meta name="twitter:title" content="Design and Build SaaS Products for Future-Thinking Tech">
+    <meta name="twitter:description" content="Design and Development Powerhouse building SaaS products and web apps for tech that changes the world.">
     <meta name="twitter:image" content="https://assets.jupiterandthegiraffe.com/share-image-min.jpg">
     <meta name="twitter:image:alt" content="Space with Jupiter in the lower left foreground, Jupiter and the Giraffe logo in the center">
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="Branding and Design for Future-Thinking Tech Companies" />
+    <meta property="og:title" content="Design and Build SaaS Products for Future-Thinking Tech" />
     <meta property="og:type" content="service" />
     <meta property="og:url" content="https://jupiterandthegiraffe.com/" />
     <meta property="og:image" content="https://assets.jupiterandthegiraffe.com/share-image-min.jpg" />
-    <meta property="og:description" content="Branding future-thinking tech companies helping them scale and stand out in the market. 'Cause revolutionary technology needs revolutionary design. Contact us now!" />
+    <meta property="og:description" content="Design and Development Powerhouse building SaaS products and web apps for tech that changes the world." />
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
